changed imgs paths

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
     <div class="id-card">
         <div class="curved-line">
-            <img class="logo" src="/images/uopeople.png" alt="" srcset="">
+            <img class="logo" src="/uopeople.png" alt="" srcset="">
             <p class="uni-text">University of the People</p>
-            <img class="dp" src="/images/raihan.png" />
+            <img class="dp" src="/raihan.png" />
         </div>
         <div class="content">
             <h1>Amdadul Islam </h1>
@@ -22,7 +22,7 @@
             <p> +8801777-171579</p>
             <p>amdadullahrayhan@gmail.com</p>
             <div class="signature">
-                <img src="/images/signature.png" alt="">
+                <img src="/signature.png" alt="">
                 <p>Signature</p>
             </div>
         </div>
